--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -19,4 +19,9 @@
 
 .App-link {
   color: #09d3ac;
+} */
+
+.dropzon-input {
+  border: 2px #ccc solid;
+  border-style: dashed;
 }
